--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <a href="homework6/index.html">Урок 6</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="homework7/index.html">Урок 7</a>
+                        <a href="homework7/artickle.html">Урок 7</a>
                     </li>
                      <li class="content__list-item">
                         <a href="homework8/index.html">Урок 8</a>
@@ -178,6 +178,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
