--- a/homework8/index.html
+++ b/homework8/index.html
@@ -11,7 +11,7 @@
     <form class="form">
       <fieldset class="form-group">
         <legend class="form-group-title">Ваши личные данные</legend>
-        <label for="name" class="label">Ваше имя*</label>
+        <label for="name" class="label">Ваше имя</label>
         <input
           id="age"
           class="input"
