--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <a href="homework8/index.html">Урок 8</a>
                     </li>
                      <li class="content__list-item">
-                        <a href="homework9/artickle.html">Урок 9</a>
+                        <a href="homework9/article.html">Урок 9</a>
                     </li>
                      <li class="content__list-item">
                         <a href="homework10/index.html">Урок 10</a>
@@ -178,6 +178,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
