--- a/index.html
+++ b/index.html
@@ -158,6 +158,9 @@
                      <li class="content__list-item">
                         <a href="wake-bake/index.html">Урок 22</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs1/index.html">Урок 23</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -178,6 +181,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
