--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs1/index.html">Урок 23</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs2/index.html">Урок 23</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -181,6 +184,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
