--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs4/index.html">Урок 26</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs5/index.html">Урок 27</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -190,6 +193,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
