Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs5/index.html">Урок 27</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs6/index.html">Урок 28</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -193,6 +196,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
