--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs6/index.html">Урок 28</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs7/index.html">Урок 29</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -196,6 +199,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
