--- a/index.html
+++ b/index.html
@@ -179,6 +179,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs7/index.html">Урок 29</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs8/index.html">Урок 30</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -199,6 +202,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
