--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
                      <li class="content__list-item">
                         <a href="homeworkjs9/index.html">Урок 31</a>
                     </li>
+                     <li class="content__list-item">
+                        <a href="homeworkjs10/index.html">Урок 32</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
@@ -205,6 +208,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
