--- a/homeworkjs10/index.html
+++ b/homeworkjs10/index.html
@@ -30,6 +30,6 @@
         </li>
       </ul>
     </div>
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
   </body>
 </html>
