--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
                     <a href="diplom/index.html">Ссылка на ДЗ</a>
+                    <a href="nike/index.html">Ссылка на ДЗ jS</a>
                 </div>
                 <div class="content__decor">
                     <div class="content__decor-text">Давай проверим, чему ты научился!</div>
@@ -208,6 +209,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
