--- a/index.html
+++ b/index.html
@@ -194,6 +194,8 @@
                 <div class="content__title">Дипломный проект</div>
                 <div class="content__list-diplom">
                     <a href="diplom/index.html">Ссылка на ДЗ</a>
+                </div>
+                <div class="content__list-diplom">
                     <a href="nike/index.html">Ссылка на ДЗ jS</a>
                 </div>
                 <div class="content__decor">
@@ -209,6 +211,7 @@
 <script src="src/index.js"></script>
 </body>
 </html>
+
 
 
 
